# invoice-platform

./: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
k6/: auth-load.js  invoice-load.js  mixed-scenario.js  payment-stress.js
k6/lib/: setup.js
migrations/: 20260423000001_init.sql  20260424000001_payments.sql  20260424000002_webhook_subscriptions.sql  20260424000003_recurring_invoices.sql
src/: lib.rs  main.rs  openapi.rs
src/auth/: jwt.rs  password.rs
src/cache/: mod.rs
src/circuit_breaker/: mod.rs
src/config/: mod.rs
src/db/: mod.rs
src/error/: mod.rs
src/jobs/: email.rs  invoice_email.rs  mod.rs  overdue.rs  recurring.rs  webhook_delivery.rs
src/middleware/: audit_log.rs  auth_user.rs  metrics.rs  mod.rs  rate_limit.rs  tenant.rs
src/modules/: mod.rs
src/modules/analytics/: mod.rs
src/modules/auth/: mod.rs
src/modules/client/: mod.rs
src/modules/invoice/: mod.rs
src/modules/organization/: mod.rs
src/modules/payment/: idempotency.rs  mod.rs  stripe_client.rs  webhook.rs
src/modules/recurring_invoice/: mod.rs
src/modules/webhook_subscription/: mod.rs
src/observability/: health.rs  metrics.rs  mod.rs
tests/: auth.rs  client.rs  invoice.rs  isolation.rs  organization.rs  payment.rs
tests/common/: mod.rs
