[package]
name = "invoice-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
# --- Async Runtime ---
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "migrate", "rust_decimal"] }
uuid = { version = "1", features = ["v4", "serde"] }
# --- Date/Time ---
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-float"] }
rust_decimal_macros = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

jsonwebtoken = "9"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }

thiserror = "2"
anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"

prometheus = "0.13"

dotenvy = "0.15"

validator = { version = "0.19", features = ["derive"] }

[profile.release]
lto = true
codegen-units = 1
