[package]
name = "invoice-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
# --- Async Runtime ---
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }

sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "migrate", "rust_decimal"] }
uuid = { version = "1", features = ["v4", "serde"] }
# --- Date/Time ---
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-float"] }
rust_decimal_macros = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

jsonwebtoken = "9"
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }

thiserror = "2"
anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"

prometheus = "0.13"

dotenvy = "0.15"

validator = { version = "0.19", features = ["derive"] }

async-stripe = { version = "0.40", default-features = false, features = ["runtime-tokio-hyper-rustls", "full", "webhook-events"] }
redis = { version = "0.27", features = ["tokio-rustls-comp", "connection-manager"] }
hex = "0.4"

apalis = { version = "0.7", features = ["retry", "limit", "tracing"] }
apalis-redis = "0.7"
apalis-cron = "0.7"
tower = "0.5"
futures = "0.3"
async-trait = "0.1"

hmac = "0.12"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rand = "0.8"

[dev-dependencies]
actix-web = { version = "4", features = ["macros"] }
actix-http = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
